--- a/pagamento/pagamento.html
+++ b/pagamento/pagamento.html
@@ -22,7 +22,7 @@
     </select>
     <div>
       <button class="botao" onclick="finalizarCompra()">Finalizar</button>
-      <button class="botao" onclick="location.href='../Inicio.html'">Voltar</button>
+      <button class="botao" onclick="location.href='../menu/menu.html'">Voltar</button>
     </div>
   </main>
   <footer>
