--- a/menu/menu.html
+++ b/menu/menu.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Menu - Cafeteria    bbbbbbb</title>
+  <title>Menu - Cafeteria</title>
   <link rel="stylesheet" href="./menu.css">
 </head>
 <body>
