arrumei uns trem

--- a/carrinho/carrinho.html
+++ b/carrinho/carrinho.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h2>Seu Carrinho</h2>
+    <h2>SEU CARRINHO 🛒</h2>
   </header>
   <main>
     <section id="itensCarrinho"></section>
