--- a/pagamento/pagamento.html
+++ b/pagamento/pagamento.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h2>Pagamento</h2>
+    <h2>Pagamento 💸</h2>
   </header>
   <main>
     <section id="resumoPagamento"></section>
