--- a/menu/menu.html
+++ b/menu/menu.html
@@ -11,9 +11,14 @@
     <h2>Cardápio</h2>
   </header>
   <main id="menu-container">
-    <!-- Os itens do menu serão inseridos via JS -->
-    <button class="botao" onclick="location.href='../carrinho/carrinho.html'">Carrinho</button>
+
   </main>
+
+  <div class="barra-inferior">
+    <button onclick="location.href='../carrinho/carrinho.html'">🛒</button>
+    <button onclick="location.href='../pagamento/pagamento.html'">💸</button>
+  </div>
+  
   <footer>
     <p>&copy; 2025 Cafeteria</p>
   </footer>
